//apply plugin: "java"

sourceCompatibility = 1.8
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

dependencies {
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
    compile group: 'org.mozilla', name: 'rhino', version: '1.7.10' // alternative to rhino is j2v8, which should work for desktop and android as well; also, why not java as the scripting language: https://www.javaworld.com/article/2071777/add-dynamic-java-code-to-your-application.html

    // core local libs
    compile fileTree(dir: 'libs', include: '*.jar')

}